--- a/index.html
+++ b/index.html
@@ -85,8 +85,7 @@
                               <div class="typed-text">Software Developer, Front End Developer, Apps Developer, Web Developer</div>
                           </div>
                           <div class="hero-btn">
-                              <a class="btn" href="">Hire Me</a>
-                              <a class="btn" href="">Contact Me</a>
+                              <a class="btn" href="#contact">Contact Me</a>
                           </div>
                       </div>
                   </div>
