--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <!-- Nav Bar Start -->
         <div class="navbar navbar-expand-lg bg-light navbar-light">
           <div class="container-fluid">
-              <a href="index.html" class="navbar-brand">DevPortfolio</a>
+              <a href="index.html" class="navbar-brand">Portfolio</a>
               <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                   <span class="navbar-toggler-icon"></span>
               </button>
@@ -282,7 +282,7 @@
               <div class="timeline-item left wow slideInLeft" data-wow-delay="0.1s">
                   <div class="timeline-text">
                       <div class="timeline-date">Sep 2015 - Mar 2017</div>
-                      <h2>Graduate Research & Teaching Assistant (Biology/Biochemisty)</h2>
+                      <h2>Graduate Research & Teaching Assistant (Biochemisty)</h2>
                       <h4>Carleton University | Ottawa, ON</h4>
                       <ul>
                         <li>Analyze data to synthesize meaningful results that summarize findings to experts and lay
