--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
   </div>
   <!-- Portfolio End -->
   
-  <!-- hobbies Start -->
+  <!-- Hobbies Start -->
   <div class="hobbies wow fadeInUp" data-wow-delay="0.1s" id="hobbies">
       <div class="container">
           <div class="hobbies-icon">
@@ -441,7 +441,7 @@
                   </div>
                   <div class="hobbies-text">
                       <p>
-                          I often biking on nice sunny days!
+                          I often bike on nice sunny days!
                       </p>
                       <h3>Biking</h3>
                   </div>
@@ -452,7 +452,7 @@
                   </div>
                   <div class="hobbies-text">
                       <p>
-                          I enjoy being active and joining fun group competitions!
+                          I enjoy being active and joining fun group sports!
                       </p>
                       <h3>Competitions</h3>
                   </div>
@@ -460,7 +460,7 @@
           </div>
       </div>
   </div>
-  <!-- hobbies End -->
+  <!-- Hobbies End -->
 
   <!-- Volunteer Start -->
   <div class="volunteer" id="volunteer">
